[package]
name = "m31jubjub"
version = "0.1.0"
edition = "2021"

[dependencies]

p3-mersenne-31 = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/main"}
p3-field = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/main"}
p3-poseidon2 = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/main"}
p3-mds = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/main"}
p3-symmetric = {git="https://github.com/zeropoolnetwork/Plonky3.git", branch="fork/main"}

rand_core = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
ark-ff = "0.4.2"
ark-serialize = "*"
generic-array = { version = "*" }
num-bigint = "0.4.6"
sha3 = "0.10.8"

hmac = "0.12.1"
sha2 = "0.10.8"
bincode = "1.3.3"
base58 = "0.2"
ripemd = "0.1"
pbkdf2 = "0.12"

zerocopy = "0.7.35"

[dev-dependencies]
libc-print = "*"

#[dependencies.generic-array]
#features = ["alloc"]
